Trying to filter lists based on users relations